# Data-Mining-Project

./: .gitignore  README.md  pyproject.toml
docs/paper/: Paper_EN.md  Paper_ZH.md
docs/plan/: plan_EN.md
docs/wiki/EN/: Ablation_EN.md  Code_EN.md  Data_EN.md  Evaluation_EN.md  Explainability_EN.md  Features_EN.md  Home_EN.md  Models_EN.md  Pipeline_EN.md
docs/wiki/ZH/: Ablation_ZH.md  Code_ZH.md  Data_ZH.md  Evaluation_ZH.md  Explainability_ZH.md  Features_ZH.md  Home_ZH.md  Models_ZH.md  Pipeline_ZH.md
paper/: Paper_EN.md
plan/: plan_EN.md  plan_ZH.md
project-proposal/: Proposal_Report_EN.md  Proposal_Report_ZH.md
reports/tables/: ablation_study_summary.csv  class_distribution.csv  constant_values.csv  correlation_matrix.csv  dataset_summary.json  efficiency_benchmark.csv  efficiency_benchmark_environment.json  explainability_summary.json  final_test_metrics.csv  final_test_metrics_no_balance.csv  final_test_metrics_no_log.csv  final_test_metrics_original.csv  final_test_predictions.csv  hyperparameter_tuning_results.csv  missing_values.csv  model_metrics_validation.csv  numeric_summary.csv  permutation_importance.csv  selected_explanation_cases.csv  shap_local_case_contributions.csv  threshold_tuning_validation.csv  threshold_tuning_validation_calibrated.csv  training_summary.json
src/neo_hazard/: __init__.py  benchmark.py  config.py  data.py  eda.py  evaluation.py  explain.py  features.py  plots.py  train.py
