[project]
name = "neo-hazard-risk"
version = "0.1.0"
description = "Explainable probability-based binary classification for NASA near-Earth object hazard labels."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
]

[project.scripts]
neo-eda = "neo_hazard.eda:main"
neo-train = "neo_hazard.train:main"
neo-explain = "neo_hazard.explain:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo_hazard"]

[tool.uv]
package = true
